# spec/oerc-openapi3.json
@@ -149,6 +149,38 @@
         }
       }
     },
+    "/tv-shows": {
+      "get": {
+        "operationId": "tvShowGet",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/TvShowResponse"
+                }
+              }
+            },
+            "description": "get all channels"
+          },
+          "500": {
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "500 message"
+          }
+        },
+        "x-response-headers": {
+          "Cache-Control": {
+            "$ref": "#/components/headers/CacheControlHeader"
+          }
+        }
+      }
+    },
     "/channel/{channel_id}": {
       "get": {
         "operationId": "singleChannelGET",
@@ -1126,6 +1158,52 @@
         "title": "Channel",
         "type": "object"
       },
+      "TvShowResponse": {
+        "properties": {
+          "id": {
+            "format": "int64",
+            "type": "integer"
+          },
+          "created_at": {
+            "type": "string"
+          },
+          "updated_at": {
+            "type": "string"
+          },
+          "title": {
+            "type": "string"
+          },
+          "url": {
+            "type": "string"
+          },
+          "hash": {
+            "type": "string"
+          },
+          "technical_id": {
+            "type": "string"
+          },
+          "homepage": {
+            "type": "string"
+          },
+          "channel_family_id": {
+            "format": "int64",
+            "type": "integer"
+          }
+        },
+        "required": [
+          "id",
+          "created_at",
+          "updated_at",
+          "title",
+          "url",
+          "hash",
+          "technical_id",
+          "homepage",
+          "channel_family_id"
+        ],
+        "title": "TvShowResponse",
+        "type": "object"
+      },
       "ImageLink": {
         "properties": {
           "created_at": {
@@ -1293,6 +1371,10 @@
             "format": "int64",
             "type": "integer"
           },
+          "page_size": {
+            "format": "int64",
+            "type": "integer"
+          },
           "entry_count": {
             "format": "int64",
             "type": "integer"
@@ -1309,6 +1391,7 @@
           "entry_count",
           "page",
           "page_count",
+          "page_size",
           "size"
         ],
         "title": "LogEntryResponse",
